--- a/Contributors/contributor.css
+++ b/Contributors/contributor.css
@@ -2,6 +2,13 @@
   margin-right: 100px;
 }
 
+body {
+  background-image: url("../blog/bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
 .container {
   margin-top: 100px;
 }
@@ -16,16 +23,12 @@
 .heroes {
   font-family: Arial, sans-serif;
   font-weight: bold;
-  margin-top: 25px;
+  margin-top: 30px;
   font-size: 45px;
-  color: var(--light);
+  color: black;
   text-align: center;
   transition: color 0.3s ease-in-out;
   cursor: pointer;
-}
-
-h1:hover {
-  color: var(--primary);
 }
 
 #contributor {
@@ -51,6 +54,10 @@ h1:hover {
   border-radius: 50%;
   position: relative;
   overflow: hidden;
+}
+
+.placeholder:hover {
+  box-shadow: rgb(9, 8, 8, 0.9);
 }
 
 .placeholder::after {
