--- a/login/login.css
+++ b/login/login.css
@@ -387,13 +387,17 @@ body::before {
   }
 }
 .success-banner {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background-color: #14810a;
-  color: white;
+  position: absolute;
+  bottom: 15px;
+  width: 60%;
+  left: 20%;
+  border-radius: 4px;
+  border: 2px solid #14810a;
   text-align: center;
-  padding: 30px;
   z-index: 1000;
-  font-size:2rem;
+  font-size:1rem;
+}
+#banner-text{
+  color:#0b8835;
+  margin: 4px;
 }
