--- a/blog/blogpagestyle.css
+++ b/blog/blogpagestyle.css
@@ -319,6 +319,7 @@ body.dark-theme .article {
   transform: scale(1.1);
   -webkit-transform: scale(1.1);
   -ms-transform: scale(1.1);
+  margin-bottom: 35px;
 }
 
 .article h2 {
@@ -868,9 +869,6 @@ section {
 
   } */
 
-  .quick-links ul {
-    flex-direction: column;
-  }
   #scrollToTopBtn {
     display: none; /* Hidden by default */
     position: fixed; /* Fixed position at the bottom right */
