--- a/login/login.css
+++ b/login/login.css
@@ -400,26 +400,24 @@ body::before {
 }
 
 .success-banner {
-  display: none; /* Hidden by default, shown when needed */
-  padding: 15px;
-  margin: 20px 0;
-  background-color: #4caf50; /* Green background */
-  color: white; /* White text */
+  display: none;
   border-radius: 5px;
+  margin-top: 15px;
+  color: #000000;
   text-align: center;
-  position: absolute; /* Positioned relative to its container */
-  bottom: 0; /* Stick to the bottom of the container */
-  left: 50%; /* Center horizontally */
-  transform: translateX(-50%); /* Center horizontally */
-  width: 80%; /* Adjust width if needed */
-  max-width: 500px; /* Maximum width */
-  z-index: 1000; /* Ensure it appears above other content */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Add shadow for better visibility */
+  position: relative;
+  width: 100%;
+  max-width: 200px;
+  border: 1px solid #004d0a;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
-
-/* Banner text styling */
+.success-banner p {
+  margin: 0;
+  padding: 5px;
+  color: #000000;
+}
 #banner-text {
-  font-size: 16px; /* Adjust font size as needed */
+  font-size: 16px;
   margin: 0;
   padding: 0;
 }
