--- a/Contributors/contributor.css
+++ b/Contributors/contributor.css
@@ -16,7 +16,7 @@ nav{
   scroll-behavior: smooth;
 }
 .heroes {
-  font-family: Arial, sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: bold;
   margin-top: 25px;
   font-size: 45px;
