--- a/style.css
+++ b/style.css
@@ -1967,20 +1967,18 @@ font-size: 36px;
 }
 
 .quick-links {
-  text-align: center;
-  width: 80vw;
-  padding: 20px;
-}
-
-.quick-links p {
+ text-align: center;
+ width: 50vw;
+ padding: 20px;
+ p{
   font-weight: bold;
+}
 }
 
 .quick-links h2 {
-  font-size: 15px;
+  font-size: 20px;
   margin-bottom: 15px;
 }
-
 
 .quick-links ul {
   list-style-type: none;
@@ -1988,23 +1986,10 @@ font-size: 36px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0;
 }
 
 .quick-links li {
-  position: relative; /* To position the vertical line */
-  padding: 0 20px; /* Add horizontal padding to create space for the vertical line */
-}
-
-.quick-links li:not(:last-child)::after {
-  content: "|";
-  position: absolute;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  color: #fff; 
-  font-size: 1.5rem; 
-  padding-left: 10px; 
+  margin-bottom: 8px;
 }
 
 .quick-links a {
